# viet-gl-core

./: .gitignore  02_CreateSchemaAndSeedData.sql  LICENSE  README.MD  alembic.ini  application_service.txt  domain_models.txt  infrastructure.txt  infrastructure_models.txt  infrastructure_repositories.txt  pyproject.toml  readme.md  requirements.txt  sample_journal.json  seed_coa.py  setup_structure.ps1  tests.txt  tt99acct.sln
TT99.APPL/: AssemblyMarker.cs  Class1.cs  DependencyInjection.cs  TT99.APPL.csproj
TT99.DMN/: Class1.cs
TT99.INFR/: Class1.cs  DependencyInjection.cs  TT99.INFR.csproj
TT99.PRES/: Program.cs  TT99.PRES.csproj  TT99.PRES.http  appsettings.json
alembic/: env.py
app/: config.py  main.py
config/: tt133_coa.yaml
docs/: DOMAIN_TRANSACTIONS.md  MASTER_DATA.md  ROADMAP.MD  TT99_ARCHITECTURE.md  TT99_FEATURES.md  TT99_REGULATORY_COMPLIANCE.md  ThongTu99_2025_1563 + 1564_99-2025-TT-BTC.doc  roadmap.md
gl_core/: __init__.py
models/: account.py  journal.py
rules/: validators.py
tests/: conftest.py  seed_coa.py  test_account.py  test_account_chart.py  test_accounting_period_service.py  test_api_endpoints.py  test_application.py  test_balance_sheet_service.py  test_cash_flow_service.py  test_cli_comprehensive.py  test_closing.py  test_db.py  test_domain.py  test_income_statement_service.py  test_infrastructure.py  test_journal_entry.py  test_journaling_service.py  test_ledger.py  test_period_closing.py  test_reporting.py  test_reporting_service.py  test_services.py  test_tai_khoan_service.py  test_validators.py  tests.py
(+135 files in other folders)
